# pickvs

./: .env.example  .envrc  .gitignore  CLAUDE.md  PLAN.md  README.md
backend/: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  BACKEND_REQUIREMENTS.md  LIBRARIES.md  SCHEMA.md  SYSTEM_DESIGN.md  docker-compose.test.yml  pyproject.toml  pyrefly.toml  pyrightconfig.json
backend/.benchmarks/Darwin-CPython-3.13-64bit/: 0005_indexes.json  0006_indexes.json  0007_indexes.json  0008_indexes.json
backend/benchmarks/: README.md  __init__.py  bench_data_loading.py  bench_indexes.py  conftest.py
backend/sql/: drop_and_recreate.sql  indexes_phase1.sql  schema.sql
backend/src/: config.py  database.py  dependencies.py  main.py
backend/src/data/: __init__.py  load.py  models.py  parser.py  types.py
backend/src/models/: __init__.py  game.py  odds.py  pick.py  user.py
backend/src/routers/: auth.py  games.py  picks.py
backend/src/utils/: auth.py  odds.py
backend/tests/: conftest.py  test_auth.py  test_auth_utils.py  test_games.py  test_health.py  test_load.py  test_parser.py  test_picks.py
docs/: ARCHITECTURE.md  BETTING_TERMINOLOGY.md  LEADERBOARD_DESIGN.md  LIBRARIES.md  PLAN.md  SCHEMA.md  SYSTEM_DESIGN.md  USER_FLOW.md
frontend/: USER_FLOW.md  pnpm-lock.yaml
wiki/: BACKEND_REQUIREMENTS.md  LEADERBOARD_DESIGN.md  PLAN.md  SCHEMA.md  SYSTEM_DESIGN.md
