[project]
authors = [{name = "Jesus Gutierrez", email = "gutierrezje.work@gmail.com"}]
dependencies = []
name = "backend"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
backend = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.13.*"
fastapi = ">=0.121.1,<0.122"
uvicorn = ">=0.38.0,<0.39"
python-dotenv = ">=1.2.1,<2"
pydantic-settings = ">=2.12.0,<3"
pytest = ">=8.0.0,<9"
pytest-asyncio = ">=0.23.0,<0.24"
httpx = ">=0.25.0,<0.26"
pyrefly = ">=0.41.0,<0.42"
ruff = ">=0.14.4,<0.15"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
lint.ignore = [
    "E501"
]

[tool.pixi.tasks]
test = "pytest"
test-watch = "pytest --tb=short -v --looponfail"
lint = "pyrefly check && ruff check"
format = "ruff format"
dev = "uvicorn src.main:app --reload"
