[project]
authors = [{name = "Jesus Gutierrez", email = "gutierrezje.work@gmail.com"}]
dependencies = []
name = "backend"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
backend = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.13.*"
fastapi = ">=0.121.1,<0.122"
uvicorn = ">=0.38.0,<0.39"
python-dotenv = ">=1.2.1,<2"
pydantic-settings = ">=2.12.0,<3"
pytest = ">=8.0.0,<9"
pytest-asyncio = ">=0.23.0,<0.24"
httpx = ">=0.25.0,<0.26"
pyrefly = ">=0.41.0,<0.42"
ruff = ">=0.14.4,<0.15"
asyncpg = ">=0.31.0,<0.32"
pytest-benchmark = ">=5.2.3,<6"

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
asyncio_mode = "auto"
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pylint error
    "PLE",
    # pylint warn
    "PLW",
]
lint.ignore = [
    "E501"
]

[tool.pixi.tasks]
test = "pytest"
test-watch = "pytest --tb=short -v --looponfail"
lint = "pyrefly check && ruff check"
format = "ruff format && ruff check --select I --fix"
dev = "uvicorn src.main:app --reload"
test-db-start = "docker compose -f docker-compose.test.yml up -d"
test-db-stop = "docker compose -f docker-compose.test.yml down -v"
test-db-logs = "docker compose -f docker-compose.test.yml logs -f"
load-data = "python src/data/load.py"
benchmark = "pytest benchmarks/bench_data_loading.py::test_bench_optimized -v"
benchmark-single = "pytest benchmarks/bench_data_loading.py::test_bench_single_inserts -v"
benchmark-all = "pytest benchmarks/ -v"
benchmark-indexes = "pytest benchmarks/bench_indexes.py -v --benchmark-save=indexes"
benchmark-indexes-compare = "pytest benchmarks/bench_indexes.py -v --benchmark-compare=indexes"
